--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,16 +1,20 @@
-[tool.poetry]
+[project]
 name = "cratedb-django"
 version = "0.1.0"
 description = ""
-authors = ["surister <surister98@gmail.com>"]
+authors = [{ name = "surister", email = "surister98@gmail.com" }]
+requires-python = "~=3.12"
 readme = "README.md"
-
-[tool.poetry.dependencies]
-python = "^3.12"
-django = "^5.1.2"
-crate = "^0.35.2"
-
+dependencies = [
+    "crate>=0.35.2,<0.36",
+    "django>=5.2",
+]
 
 [build-system]
-requires = ["poetry-core"]
-build-backend = "poetry.core.masonry.api"
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
+[dependency-groups]
+dev = [
+    "requests>=2.32.3",
+]
