--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
 name = "cratedb-django"
 version = "0.0.0" # The Version is updated in the CI workflow.
-description = ""
+description = "CrateDB connector for Django "
 authors = [{ name = "Ivan", email = "surister98@gmail.com" }]
 requires-python = ">=3.10"
 readme = "README.md"
 license = { file = "LICENSE.md"}
 classifiers = [
+    "Development Status :: 3 - Alpha",
     "Framework :: Django",
     "Topic :: Database",
     "Topic :: Database :: Front-Ends",
