--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,13 +20,14 @@ classifiers = [
     "Programming Language :: Python :: 3 :: Only",
 ]
 dependencies = [
-    "crate>=0.35.2,<0.36",
+    "crate==2.0.0",
     "django>=5.2",
 ]
 
 [dependency-groups]
 dev = [
     "black>=25.1.0",
+    "django-stubs>=5.1.3",
     "pytest-cratedb>=0.4.0",
     "requests>=2.32.3",
 ]
