--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -12,7 +12,7 @@ jobs:
       fail-fast: false
       matrix:
         python-version: [ '3.12' ]
-        cratedb-version: [ '5.10.5' ]
+        cratedb-version: [ 'nightly' ]
     services:
       cratedb:
         image: crate/crate:${{ matrix.cratedb-version }}
